GKV/antlr-generated/edu/asu/msse/gkv/GKVParser.java
// $ANTLR 3.5.2 /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g 2016-04-09 16:51:03

  package edu.asu.msse.gkv;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class GKVParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDING_OPERATOR", "BOOLEAN", 
		"CK_ELSE", "CK_ELSIF", "CK_IF", "CK_THEN", "COMMA", "COMPK_KEYWORDS", 
		"C_BRACE", "DATATYPE", "DECIMAL", "FK_CALL", "FK_FUNCTION", "FK_RETURN", 
		"FK_RETURNS", "FK_USES", "FK_WITH", "IDENTIFIER", "INTEGER", "MULTIPLYING_OPERATOR", 
		"NUMBER", "NUMERIC_LITERAL", "O_BRACE", "WHITESPACE", "'('", "')'", "';'", 
		"'and'", "'is'", "'or'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int ADDING_OPERATOR=4;
	public static final int BOOLEAN=5;
	public static final int CK_ELSE=6;
	public static final int CK_ELSIF=7;
	public static final int CK_IF=8;
	public static final int CK_THEN=9;
	public static final int COMMA=10;
	public static final int COMPK_KEYWORDS=11;
	public static final int C_BRACE=12;
	public static final int DATATYPE=13;
	public static final int DECIMAL=14;
	public static final int FK_CALL=15;
	public static final int FK_FUNCTION=16;
	public static final int FK_RETURN=17;
	public static final int FK_RETURNS=18;
	public static final int FK_USES=19;
	public static final int FK_WITH=20;
	public static final int IDENTIFIER=21;
	public static final int INTEGER=22;
	public static final int MULTIPLYING_OPERATOR=23;
	public static final int NUMBER=24;
	public static final int NUMERIC_LITERAL=25;
	public static final int O_BRACE=26;
	public static final int WHITESPACE=27;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GKVParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GKVParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return GKVParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g"; }



	// $ANTLR start "program"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:15:1: program : ( sequenceOfStatements | function )+ ;
	public final void program() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:15:9: ( ( sequenceOfStatements | function )+ )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:16:11: ( sequenceOfStatements | function )+
			{
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:16:11: ( sequenceOfStatements | function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=3;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==CK_IF||LA1_0==DATATYPE||LA1_0==FK_CALL||LA1_0==IDENTIFIER||LA1_0==30||LA1_0==34) ) {
					alt1=1;
				}
				else if ( (LA1_0==FK_FUNCTION) ) {
					alt1=2;
				}

				switch (alt1) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:16:12: sequenceOfStatements
					{
					pushFollow(FOLLOW_sequenceOfStatements_in_program51);
					sequenceOfStatements();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:16:35: function
					{
					pushFollow(FOLLOW_function_in_program55);
					function();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "sequenceOfStatements"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:18:1: sequenceOfStatements : ( simpleStatement | compoundStatement )+ ;
	public final void sequenceOfStatements() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:18:21: ( ( simpleStatement | compoundStatement )+ )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:18:23: ( simpleStatement | compoundStatement )+
			{
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:18:23: ( simpleStatement | compoundStatement )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=3;
				switch ( input.LA(1) ) {
				case IDENTIFIER:
					{
					alt2=1;
					}
					break;
				case DATATYPE:
					{
					alt2=1;
					}
					break;
				case FK_CALL:
					{
					alt2=1;
					}
					break;
				case 30:
					{
					alt2=1;
					}
					break;
				case CK_IF:
					{
					alt2=2;
					}
					break;
				case 34:
					{
					alt2=2;
					}
					break;
				}
				switch (alt2) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:18:24: simpleStatement
					{
					pushFollow(FOLLOW_simpleStatement_in_sequenceOfStatements75);
					simpleStatement();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:18:42: compoundStatement
					{
					pushFollow(FOLLOW_compoundStatement_in_sequenceOfStatements79);
					compoundStatement();
					state._fsp--;

					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "sequenceOfStatements"



	// $ANTLR start "simpleStatement"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:1: simpleStatement : ( assignmentStatement | declarationStatement | functionCall )? ';' ;
	public final void simpleStatement() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:16: ( ( assignmentStatement | declarationStatement | functionCall )? ';' )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:18: ( assignmentStatement | declarationStatement | functionCall )? ';'
			{
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:18: ( assignmentStatement | declarationStatement | functionCall )?
			int alt3=4;
			switch ( input.LA(1) ) {
				case IDENTIFIER:
					{
					alt3=1;
					}
					break;
				case DATATYPE:
					{
					alt3=2;
					}
					break;
				case FK_CALL:
					{
					alt3=3;
					}
					break;
			}
			switch (alt3) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:19: assignmentStatement
					{
					pushFollow(FOLLOW_assignmentStatement_in_simpleStatement90);
					assignmentStatement();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:41: declarationStatement
					{
					pushFollow(FOLLOW_declarationStatement_in_simpleStatement94);
					declarationStatement();
					state._fsp--;

					}
					break;
				case 3 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:20:64: functionCall
					{
					pushFollow(FOLLOW_functionCall_in_simpleStatement98);
					functionCall();
					state._fsp--;

					}
					break;

			}

			match(input,30,FOLLOW_30_in_simpleStatement102); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "simpleStatement"



	// $ANTLR start "compoundStatement"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:22:1: compoundStatement : ( ifStatement | loop );
	public final void compoundStatement() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:22:18: ( ifStatement | loop )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==CK_IF) ) {
				alt4=1;
			}
			else if ( (LA4_0==34) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:22:20: ifStatement
					{
					pushFollow(FOLLOW_ifStatement_in_compoundStatement109);
					ifStatement();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:22:34: loop
					{
					pushFollow(FOLLOW_loop_in_compoundStatement113);
					loop();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "compoundStatement"



	// $ANTLR start "assignmentStatement"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:24:1: assignmentStatement : IDENTIFIER 'is' expression ;
	public final void assignmentStatement() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:24:20: ( IDENTIFIER 'is' expression )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:24:22: IDENTIFIER 'is' expression
			{
			match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_assignmentStatement120); 
			match(input,32,FOLLOW_32_in_assignmentStatement122); 
			pushFollow(FOLLOW_expression_in_assignmentStatement124);
			expression();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignmentStatement"



	// $ANTLR start "ifStatement"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:26:1: ifStatement : CK_IF condition CK_THEN O_BRACE sequenceOfStatements C_BRACE ( CK_ELSE O_BRACE sequenceOfStatements C_BRACE )? ;
	public final void ifStatement() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:26:13: ( CK_IF condition CK_THEN O_BRACE sequenceOfStatements C_BRACE ( CK_ELSE O_BRACE sequenceOfStatements C_BRACE )? )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:26:15: CK_IF condition CK_THEN O_BRACE sequenceOfStatements C_BRACE ( CK_ELSE O_BRACE sequenceOfStatements C_BRACE )?
			{
			match(input,CK_IF,FOLLOW_CK_IF_in_ifStatement132); 
			pushFollow(FOLLOW_condition_in_ifStatement134);
			condition();
			state._fsp--;

			match(input,CK_THEN,FOLLOW_CK_THEN_in_ifStatement136); 
			match(input,O_BRACE,FOLLOW_O_BRACE_in_ifStatement138); 
			pushFollow(FOLLOW_sequenceOfStatements_in_ifStatement155);
			sequenceOfStatements();
			state._fsp--;

			match(input,C_BRACE,FOLLOW_C_BRACE_in_ifStatement172); 
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:28:23: ( CK_ELSE O_BRACE sequenceOfStatements C_BRACE )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==CK_ELSE) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:28:24: CK_ELSE O_BRACE sequenceOfStatements C_BRACE
					{
					match(input,CK_ELSE,FOLLOW_CK_ELSE_in_ifStatement175); 
					match(input,O_BRACE,FOLLOW_O_BRACE_in_ifStatement177); 
					pushFollow(FOLLOW_sequenceOfStatements_in_ifStatement179);
					sequenceOfStatements();
					state._fsp--;

					match(input,C_BRACE,FOLLOW_C_BRACE_in_ifStatement181); 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ifStatement"



	// $ANTLR start "loop"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:31:1: loop : 'while' condition O_BRACE sequenceOfStatements C_BRACE ;
	public final void loop() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:31:5: ( 'while' condition O_BRACE sequenceOfStatements C_BRACE )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:31:7: 'while' condition O_BRACE sequenceOfStatements C_BRACE
			{
			match(input,34,FOLLOW_34_in_loop220); 
			pushFollow(FOLLOW_condition_in_loop222);
			condition();
			state._fsp--;

			match(input,O_BRACE,FOLLOW_O_BRACE_in_loop224); 
			pushFollow(FOLLOW_sequenceOfStatements_in_loop227);
			sequenceOfStatements();
			state._fsp--;

			match(input,C_BRACE,FOLLOW_C_BRACE_in_loop229); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "loop"



	// $ANTLR start "condition"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:33:1: condition : expression ;
	public final void condition() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:33:10: ( expression )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:33:12: expression
			{
			pushFollow(FOLLOW_expression_in_condition242);
			expression();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "condition"



	// $ANTLR start "expression"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:35:1: expression : relation ( 'and' relation | 'or' relation )* ;
	public final void expression() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:35:12: ( relation ( 'and' relation | 'or' relation )* )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:35:14: relation ( 'and' relation | 'or' relation )*
			{
			pushFollow(FOLLOW_relation_in_expression250);
			relation();
			state._fsp--;

			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:35:23: ( 'and' relation | 'or' relation )*
			loop6:
			while (true) {
				int alt6=3;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==31) ) {
					alt6=1;
				}
				else if ( (LA6_0==33) ) {
					alt6=2;
				}

				switch (alt6) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:35:24: 'and' relation
					{
					match(input,31,FOLLOW_31_in_expression253); 
					pushFollow(FOLLOW_relation_in_expression255);
					relation();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:35:41: 'or' relation
					{
					match(input,33,FOLLOW_33_in_expression259); 
					pushFollow(FOLLOW_relation_in_expression261);
					relation();
					state._fsp--;

					}
					break;

				default :
					break loop6;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "expression"



	// $ANTLR start "relation"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:37:1: relation : simpleExpression ( COMPK_KEYWORDS simpleExpression )? ;
	public final void relation() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:37:9: ( simpleExpression ( COMPK_KEYWORDS simpleExpression )? )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:37:11: simpleExpression ( COMPK_KEYWORDS simpleExpression )?
			{
			pushFollow(FOLLOW_simpleExpression_in_relation270);
			simpleExpression();
			state._fsp--;

			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:37:28: ( COMPK_KEYWORDS simpleExpression )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==COMPK_KEYWORDS) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:37:29: COMPK_KEYWORDS simpleExpression
					{
					match(input,COMPK_KEYWORDS,FOLLOW_COMPK_KEYWORDS_in_relation273); 
					pushFollow(FOLLOW_simpleExpression_in_relation275);
					simpleExpression();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "relation"



	// $ANTLR start "simpleExpression"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:39:1: simpleExpression : term ( ADDING_OPERATOR term )* ;
	public final void simpleExpression() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:39:17: ( term ( ADDING_OPERATOR term )* )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:39:19: term ( ADDING_OPERATOR term )*
			{
			pushFollow(FOLLOW_term_in_simpleExpression284);
			term();
			state._fsp--;

			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:39:24: ( ADDING_OPERATOR term )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==ADDING_OPERATOR) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:39:25: ADDING_OPERATOR term
					{
					match(input,ADDING_OPERATOR,FOLLOW_ADDING_OPERATOR_in_simpleExpression287); 
					pushFollow(FOLLOW_term_in_simpleExpression289);
					term();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "simpleExpression"



	// $ANTLR start "term"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:41:1: term : factor ( MULTIPLYING_OPERATOR factor )* ;
	public final void term() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:41:5: ( factor ( MULTIPLYING_OPERATOR factor )* )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:41:7: factor ( MULTIPLYING_OPERATOR factor )*
			{
			pushFollow(FOLLOW_factor_in_term298);
			factor();
			state._fsp--;

			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:41:14: ( MULTIPLYING_OPERATOR factor )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==MULTIPLYING_OPERATOR) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:41:15: MULTIPLYING_OPERATOR factor
					{
					match(input,MULTIPLYING_OPERATOR,FOLLOW_MULTIPLYING_OPERATOR_in_term301); 
					pushFollow(FOLLOW_factor_in_term303);
					factor();
					state._fsp--;

					}
					break;

				default :
					break loop9;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "term"



	// $ANTLR start "factor"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:1: factor : ( NUMERIC_LITERAL | IDENTIFIER | '(' expression ')' ) ;
	public final void factor() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:8: ( ( NUMERIC_LITERAL | IDENTIFIER | '(' expression ')' ) )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:10: ( NUMERIC_LITERAL | IDENTIFIER | '(' expression ')' )
			{
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:10: ( NUMERIC_LITERAL | IDENTIFIER | '(' expression ')' )
			int alt10=3;
			switch ( input.LA(1) ) {
			case NUMERIC_LITERAL:
				{
				alt10=1;
				}
				break;
			case IDENTIFIER:
				{
				alt10=2;
				}
				break;
			case 28:
				{
				alt10=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}
			switch (alt10) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:11: NUMERIC_LITERAL
					{
					match(input,NUMERIC_LITERAL,FOLLOW_NUMERIC_LITERAL_in_factor315); 
					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:29: IDENTIFIER
					{
					match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_factor319); 
					}
					break;
				case 3 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:43:42: '(' expression ')'
					{
					match(input,28,FOLLOW_28_in_factor323); 
					pushFollow(FOLLOW_expression_in_factor325);
					expression();
					state._fsp--;

					match(input,29,FOLLOW_29_in_factor327); 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "factor"



	// $ANTLR start "declarationStatement"
	// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:1: declarationStatement : ( DATATYPE IDENTIFIER ( COMMA IDENTIFIER )* | DATATYPE IDENTIFIER 'is' expression ( COMMA IDENTIFIER 'is' expression )* ) ;
	public final void declarationStatement() throws RecognitionException {
		try {
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:21: ( ( DATATYPE IDENTIFIER ( COMMA IDENTIFIER )* | DATATYPE IDENTIFIER 'is' expression ( COMMA IDENTIFIER 'is' expression )* ) )
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:23: ( DATATYPE IDENTIFIER ( COMMA IDENTIFIER )* | DATATYPE IDENTIFIER 'is' expression ( COMMA IDENTIFIER 'is' expression )* )
			{
			// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:23: ( DATATYPE IDENTIFIER ( COMMA IDENTIFIER )* | DATATYPE IDENTIFIER 'is' expression ( COMMA IDENTIFIER 'is' expression )* )
			int alt13=2;
			int LA13_0 = input.LA(1);
			if ( (LA13_0==DATATYPE) ) {
				int LA13_1 = input.LA(2);
				if ( (LA13_1==IDENTIFIER) ) {
					int LA13_2 = input.LA(3);
					if ( (LA13_2==32) ) {
						alt13=2;
					}
					else if ( (LA13_2==COMMA||LA13_2==30) ) {
						alt13=1;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 13, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 13, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 13, 0, input);
				throw nvae;
			}

			switch (alt13) {
				case 1 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:24: DATATYPE IDENTIFIER ( COMMA IDENTIFIER )*
					{
					match(input,DATATYPE,FOLLOW_DATATYPE_in_declarationStatement336); 
					match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declarationStatement338); 
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:44: ( COMMA IDENTIFIER )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==COMMA) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:45: COMMA IDENTIFIER
							{
							match(input,COMMA,FOLLOW_COMMA_in_declarationStatement341); 
							match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declarationStatement343); 
							}
							break;

						default :
							break loop11;
						}
					}

					}
					break;
				case 2 :
					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:65: DATATYPE IDENTIFIER 'is' expression ( COMMA IDENTIFIER 'is' expression )*
					{
					match(input,DATATYPE,FOLLOW_DATATYPE_in_declarationStatement348); 
					match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declarationStatement350); 
					match(input,32,FOLLOW_32_in_declarationStatement352); 
					pushFollow(FOLLOW_expression_in_declarationStatement354);
					expression();
					state._fsp--;

					// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:101: ( COMMA IDENTIFIER 'is' expression )*
					loop12:
					while (true) {
						int alt12=2;
						int LA12_0 = input.LA(1);
						if ( (LA12_0==COMMA) ) {
							alt12=1;
						}

						switch (alt12) {
						case 1 :
							// /home/gowtham/CompilerDesign/workspace/GKV/src/edu/asu/msse/gkv/GKV.g:45:102: COMMA IDENTIFIER 'is' expression
							{
							match(input,COMMA,FOLLOW_COMMA_in_declarationStatement357); 
							match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declarationStatement359); 
							match(input,32,FOLLOW_32_in_declarationStatement361); 
							pushFollow(FOLLOW_expression_in_declarationStatement363);
							expression();
							state._fsp--;

							}
							break;

						default :
							break loop12;
						}
					}

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarationStatement"


